--- a/bootstrapMain.html
+++ b/bootstrapMain.html
@@ -7,46 +7,38 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="bootstrapMain.css">
 </head>
+
 <body>
-  <div class="container">
+  
+  <section class="container">
     <h2>Scroll Down</h2>
     <p>Scroll down to see the sticky effect.</p>
-  </div>
+  </section>
 
+  <ul class="headerul">
+    <li class="headerli"><a class="headerli" href="/Users/eileen/Desktop/WEB/Babe BD/at_home.html" target="_blank">Home</a></li>
+    <li class="headerli"><a class="headerli" href="#gallery">Gallery</a></li>
+    <li class="headerli"><a class="headerli" href="/Users/eileen/Desktop/WEB/Babe BD/outside.html">Outdoor</a></li>
+  </ul>
 
-  <!-- <header class="container">
-    <div class="row">
-      <h1 class="col-sm-4">Babe's Page</h1> -->
-
-
-      <ul>
-        <li><a class="header" href="/Users/eileen/Desktop/WEB/Babe BD/at_home.html" target="_blank">Home</a></li>
-        <li><a class="header" href="/Users/eileen/Desktop/WEB/Babe BD/foodie.html">News</a></li>
-        <li><a class="header" href="/Users/eileen/Desktop/WEB/Babe BD/outside.html">Contact</a></li>
-      </ul>
-      <!-- <nav class="col-sm-8 text-right">
-          <a class="header" href="/Users/eileen/Desktop/WEB/Babe BD/at_home.html" target="_blank">Home</a>
-          <a class="header" href="/Users/eileen/Desktop/WEB/Babe BD/foodie.html" target="_blank">Foodie</a>
-          <a class="header" href="/Users/eileen/Desktop/WEB/Babe BD/outside.html" target="_blank">Outside</a>
-      </nav> -->
-    <!-- </div>
-  </header> -->
-  
   <section class="jumbotron">
 		<div class="container">
       <div class="row text-center">
         <h2>Happy 30's Birthday</h2>
         <h3>This Year's Best</h3>
-        <!-- <a class="btn btn-primary" href="#" role="button">See all</a> -->
+        <a class="btn btn-primary" href="#" role="button">See all</a>
       </div>
   	</div>
 	</section>
   
-  <section class="container">
+  <section id="gallery" class="container">
     <div class="row">
+      <!-- <a href="/Users/eileen/Desktop/WEB/Babe BD/life_with_you.html"> -->
       <figure class="col-sm-6">
       	<p>Life with you</p>
-        <img src="/Users/eileen/Desktop/WEB/Babe BD/pic/babestyle.jpg">
+        <a href="/Users/eileen/Desktop/WEB/Babe BD/life_with_you.html" target="blank">
+          <img src="/Users/eileen/Desktop/WEB/Babe BD/pic/babestyle.jpg">
+        </a>
         <!-- <img src="/Users/eileen/Desktop/WEB/Babe BD/pic/cake.jpg"> -->
       </figure>
       <figure class="col-sm-6">
@@ -57,7 +49,7 @@
     </div>
     <div class="row"> 
       <figure class="col-sm-6">
-        <p>Sweet Lunch from you</p>
+        <p>Love from you</p>
       	<img src="/Users/eileen/Desktop/WEB/Babe BD/pic/babecook.jpg">
         <!-- <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/gifts.jpg"> -->
       </figure>
