--- a/life_with_you.html
+++ b/life_with_you.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Outdoor</title>
+  <title>Life With You</title>
   <meta charset="utf-8"/>
 </head>
 <body>
