--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Happy 30</title>
+  <title>Melbourne Life</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="home.css">
@@ -28,18 +28,18 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="#">WebSiteName</a>
+        <a class="navbar-brand" href="#">Melbourne</a>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#home">HOME</a></li>
+            <li><a href="#home">ABOUT</a></li>
             <li><a href="#gallery">GALLERY</a></li>
-            <li><a href="#section3">Section 3</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
+            <li><a href="#section3">SPORT</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SELF-ENHANCEMENT<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#section41">Section 4-1</a></li>
-                <li><a href="#section42">Section 4-2</a></li>
+                <li><a href="#section41">Coding</a></li>
+                <li><a href="#section42">Reading</a></li>
               </ul>
             </li>
           </ul>
@@ -89,17 +89,17 @@
   </div>
 
   <div id="section3" class="container-fluid">
-    <h1>Section 3</h1>
+    <h1>SPORT</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
   <div id="section41" class="container-fluid">
-    <h1>Section 4 Submenu 1</h1>
+    <h1>Coding</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
   <div id="section42" class="container-fluid">
-    <h1>Section 4 Submenu 2</h1>
+    <h1>Reading</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
