Update html files

--- a/home.html
+++ b/home.html
@@ -35,11 +35,11 @@
           <ul class="nav navbar-nav">
             <li><a href="#home">ABOUT</a></li>
             <li><a href="#gallery">GALLERY</a></li>
-            <li><a href="#section3">SPORT</a></li>
+            <li><a href="#sport">SPORT</a></li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SELF-ENHANCEMENT<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#section41">Coding</a></li>
-                <li><a href="#section42">Reading</a></li>
+                <li><a href="#coding">Coding</a></li>
+                <li><a href="#reading">Reading</a></li>
               </ul>
             </li>
           </ul>
@@ -51,26 +51,31 @@
   <div id="home" class="parallax jumbotron">
     <div class="container-fluid">
       <div class="row text-center">
-        <h2>Happy 30's Birthday</h2>
-        <h3>This Year's Best</h3>
+        <h2>Life In Melbourne</h2>
+        <h3>the best is yet to come</h3>
         <a class="btn btn-primary" href="#" role="button">See all</a>
       </div>
     </div>
   </div>
+
+  <!-- <div class="container thematic_break_section">
+      <hr class="thematic_break">
+  </div> -->
     
   <!-- 圖片連結連不到 -->
   <div id="gallery" class="container"> <!-- container-fluid 沒有寬度設定，通常用在滿版頁面-->
+    <!-- <hr class="thematic_break"> -->
     <div class="row">
       <!-- <a href="/Users/eileen/Desktop/WEB/Babe BD/life_with_you.html" target="_blank"> -->
       <figure class="col-sm-6">
-        <p>Life</p>
+        <p>Life</p> <!-- 平常的生活 -->
         <a href="life_with_you.html" target="_blank">
           <img src="pic/babestyle.jpg" alt="Life With You">
         </a>
       </figure>
       <!-- </a> -->
       <figure class="col-sm-6">
-        <p>Handmade</p>
+        <p>Handmades</p> <!-- 自己煮、做的各種 -->
         <a href="handmade.html" target="_blank">
           <img src="pic/cake.jpg">
         </a>
@@ -78,27 +83,27 @@
     </div>
     <div class="row"> 
       <figure class="col-sm-6">
-        <p>Love from you</p>
+        <p>Gatherings</p> <!-- 與朋友們的聚會（生日、歡送等） -->
         <img src="pic/babecook.jpg">
       </figure>
       <figure class="col-sm-6">
-        <p>Breakfast time</p>
+        <p>Outdoor Activities</p> <!-- 外出踩踏 -->
         <img src="pic/waffle.jpg">
       </figure>
     </div>
   </div>
 
-  <div id="section3" class="container-fluid">
+  <div id="sport" class="container-fluid">
     <h1>SPORT</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
-  <div id="section41" class="container-fluid">
+  <div id="coding" class="container-fluid">
     <h1>Coding</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
-  <div id="section42" class="container-fluid">
+  <div id="reading" class="container-fluid">
     <h1>Reading</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
@@ -109,16 +114,16 @@
       <p class="col-sm-4">&copy; 2019 Big Day</p>
       <ul class="col-sm-8">
         <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+          <a href="https://twitter.com/eileenchu8432"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></a>
         </li>
         <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+          <a href="https://www.facebook.com/eileen8432"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a>
         </li>
         <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+          <a href="https://www.instagram.com/eileen8432/?hl=en"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg"></a>
         </li>
         <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+          <a href="https://medium.com/"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg"></a>
         </li>
       </ul>
     </div>
