Update image links

--- a/home.html
+++ b/home.html
@@ -63,17 +63,15 @@
   </div> -->
     
   <!-- 圖片連結連不到 -->
-  <div id="gallery" class="container"> <!-- container-fluid 沒有寬度設定，通常用在滿版頁面-->
+  <div id="gallery" class="container gallery"> <!-- container-fluid 沒有寬度設定，通常用在滿版頁面-->
     <!-- <hr class="thematic_break"> -->
     <div class="row">
-      <!-- <a href="/Users/eileen/Desktop/WEB/Babe BD/life_with_you.html" target="_blank"> -->
       <figure class="col-sm-6">
         <p>Life</p> <!-- 平常的生活 -->
-        <a href="life_with_you.html" target="_blank">
+        <a href="life.html" target="_blank">
           <img src="pic/babestyle.jpg" alt="Life With You">
         </a>
       </figure>
-      <!-- </a> -->
       <figure class="col-sm-6">
         <p>Handmades</p> <!-- 自己煮、做的各種 -->
         <a href="handmade.html" target="_blank">
@@ -84,26 +82,30 @@
     <div class="row"> 
       <figure class="col-sm-6">
         <p>Gatherings</p> <!-- 與朋友們的聚會（生日、歡送等） -->
-        <img src="pic/babecook.jpg">
+        <a href="gathering.html" target="_blank">
+          <img src="pic/babecook.jpg">
+        </a>
       </figure>
       <figure class="col-sm-6">
         <p>Outdoor Activities</p> <!-- 外出踩踏 -->
-        <img src="pic/waffle.jpg">
+        <a href="outdoor.html" target="_blank">
+          <img src="pic/waffle.jpg">
+        </a>
       </figure>
     </div>
   </div>
 
-  <div id="sport" class="container-fluid">
+  <div id="sport" class="container-fluid sport">
     <h1>SPORT</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
-  <div id="coding" class="container-fluid">
+  <div id="coding" class="container-fluid coding">
     <h1>Coding</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
-  <div id="reading" class="container-fluid">
+  <div id="reading" class="container-fluid reading">
     <h1>Reading</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
