about(html css) updated

--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
       <div class="row text-center">
         <h2>Life In Melbourne</h2>
         <h3>the best is yet to come</h3>
-        <a class="btn btn-primary" href="#" role="button">See all</a>
+        <a class="btn btn-primary" href="about.html" target="_blank" role="button">See all</a>
       </div>
     </div>
   </div>
@@ -62,7 +62,6 @@
       <hr class="thematic_break">
   </div> -->
     
-  <!-- 圖片連結連不到 -->
   <div id="gallery" class="container gallery"> <!-- container-fluid 沒有寬度設定，通常用在滿版頁面-->
     <!-- <hr class="thematic_break"> -->
     <div class="row">
