--- a/about.html
+++ b/about.html
@@ -104,7 +104,8 @@
 		<figure class="col-sm-3">
 			<img src="pic/cigar.jpg">
 			<hr class="thematic_break">
-			<p>Handmade from recycled cloth, Marta’s womenswear is about comfort 
+			<p>
+				Handmade from recycled cloth, Marta’s womenswear is about comfort 
 				that conforms to people’s humanity. Aliquam feugiat tortor nec 
 				scelerisque consequat. Integer at tempor ligula. Nam arcu lacus, 
 				eleifend vel sem ut, sollicitudin maximus ex. Phasellus nec mollis sapien.
@@ -113,7 +114,8 @@
 		<figure class="col-sm-3">
 			<img src="pic/cigar.jpg">
 			<hr class="thematic_break">
-			<p>Last year, Sonora brought together twenty-two emerging brands 
+			<p>
+				Last year, Sonora brought together twenty-two emerging brands 
 				that ranged from apparel and accessories to wine and beer. 
 				What unified us was our love for the outdoors, getting our hands 
 				dirty, and older, more natural DIY techniques. Last year, Sonora 
@@ -124,7 +126,8 @@
 		<figure class="col-sm-3">
 			<img src="pic/cigar.jpg">
 			<hr class="thematic_break">
-			<p>The designers at Thorne combine ergonomic stitching with classic materials 
+			<p>
+				The designers at Thorne combine ergonomic stitching with classic materials 
 				like organic denim and leather. Aliquam feugiat tortor nec scelerisque 
 				consequat. Integer at tempor ligula.
 			</p>
@@ -132,8 +135,9 @@
 		<figure class="col-sm-3">
 			<img src="pic/cigar.jpg">
 			<hr class="thematic_break">
-			<p>Brine brings you one of the oldest forms of food preservation and adds 
-				a Californian twist. Aliquam feugiat tortor nec scelerisque consequat. 
+			<p>
+				Brine brings you one of the oldest forms of food preservation and adds 
+				a Ｓan Franciscan twist. Aliquam feugiat tortor nec scelerisque consequat. 
 				Integer at tempor ligula. Nam arcu lacus, eleifend vel sem ut.
 			</p>
 		</figure>
@@ -153,7 +157,22 @@
 	</p>
 </div>
 
-<div class="parallax4"></div>
+<div class="parallax4 center-content">
+	<p>
+		<i>"Last year, Sonora brought together twenty-two emerging brands 
+		that ranged from apparel and accessories to wine and beer. 
+		What unified us was our love for the outdoors, getting our hands 
+		dirty, and older, more natural DIY techniques."</i>
+	</p>
+	<p style="font-size:10px;">- LILY JOE FRANSTAN</p>
+</div>
+
+<div class="center-content">
+	<p style="line-height: 1.8;">
+		(+61)412345678 &nbsp &nbsp &nbsp practice.website@gmail.com <br>
+		<a style="color: inherit;font-size: 10px;">INSTAGRAM</a> &nbsp &nbsp <a style="color: inherit;font-size: 10px;">FACEBOOK</a> <br>
+	</p>
+</div>
 
 </body>
 </html>
