Update about html/css footer

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
 	<p style="font-size:10px;">- LILY JOE FRANSTAN</p>
 </div>
 
-<div class="center-content">
+<div class="footer-center-content">
 	<p style="line-height: 1.8;">
 		(+61)412345678 &nbsp &nbsp &nbsp practice.website@gmail.com <br>
 		<a style="color: inherit;font-size: 10px;">INSTAGRAM</a> &nbsp &nbsp <a style="color: inherit;font-size: 10px;">FACEBOOK</a> <br>
